tests/neg-macros/i19676/Test_2.scala
//> using options -experimental -Yno-experimental

@buggy // error
case class Foo()